# SolaxyEasyNode

./: .gitignore  Anchor.toml  README.md  config.toml.template  install.sh
dashboard/: app.py
dashboard/templates/: index.html
programs/node-reputation/: Cargo.toml
programs/node-reputation/src/: errors.rs  lib.rs  reputation.rs  state.rs
programs/node-reputation/src/instructions/: close_epoch.rs  deactivate_node.rs  initialize.rs  mod.rs  register_node.rs  submit_heartbeat.rs  update_metadata.rs
relayer/: reputation_relayer.py  requirements.txt  solaxy-reputation.service
services/: bridge-cleanup.sh  celestia-bridge.service  celestia-full.service  celestia-light.service  celestia-upgrade.sh  solaxy-dashboard.service  solaxy-node.service
tests/: reputation.ts
