[package]
name = "node-reputation"
version = "1.1.0"
description = "On-chain node reputation protocol for SolaxyEasyNode"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "node_reputation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
